Add AmazonStorage interface